// Protocol buffer definitions used by the testApp for gRPC Homa
// support in Java. Allows testing all the variations combinations
// of streaming in and out.

syntax = "proto3";

package basic;

option java_outer_classname = "BasicProto";

service Basic {
    rpc Ping(Request) returns (Response) {}
    rpc StreamOut(stream StreamOutRequest) returns (Response) {}
    rpc StreamIn(StreamInRequest) returns (stream Response) {}
    rpc Stream2Way(stream StreamOutRequest) returns (stream Response) {}
    rpc PrintLog(Empty) returns (Empty) {}
}

message Request {
    sfixed32 requestItems = 1;
    sfixed32 replyItems = 2;
    repeated sfixed32 data = 3;
}

message Response {
    repeated sfixed32 data = 1;
}

message StreamOutRequest {
    sfixed32 done = 1;
    sfixed32 requestItems = 2;
    sfixed32 replyItems = 3;
    repeated sfixed32 data = 4;
}

message StreamInRequest {
    repeated sfixed32 sizes = 1;
}

message Empty {}
